<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/asignar_jurados"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/app_asignar_jurados" />
        <item
            android:id="@+id/registrar_banda"
            android:icon="@drawable/ic_border_color_black_24dp"
            android:title="@string/app_registrar_banda" />
        <item
            android:id="@+id/crear_evento"
            android:icon="@drawable/ic_wb_incandescent_black_24dp"
            android:title="@string/app_crear_evento" />
        <item
            android:id="@+id/generar_reporte"
            android:title="" />
        <item
            android:id="@+id/criterios_evaluadados"
            android:title="" />

    </group>

    <item
        android:title="Communicación">
        <menu>
            <item
                android:id="@+id/nav_nosotros"
                android:title="" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/log_out_item"  />

        </menu>
    </item>

</menu>
