<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context="com.bandmusic.bandmusic.actividad_principal.DetalleSobreNosotros">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivDetalleImagen"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:id="@+id/tvDetalleNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_name"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/DetalleProfesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_profesion"
            android:gravity="center_horizontal"
            android:layout_margin="3dp"
            android:textSize="25sp"
            android:textColor="#000000"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/DetalleCelular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_celular"
            android:gravity="center_horizontal"
            android:layout_margin="3dp"
            android:textSize="25sp"
            android:textColor="#000000"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/DetalleCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_email"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="italic" />

    </LinearLayout>


</LinearLayout>
