<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".actividad_principal.Jurados_Evento">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutJuradosEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextJuradosEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_evento"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20dp"
                android:drawableLeft="@drawable/ic_event_available_black_24dp"
                android:textColorHint="#FFF"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutJuradosCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextJuradosCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_categoria"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20dp"
                android:drawableLeft="@drawable/ic_wc_black_24dp"
                android:textColorHint="#FFF"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutJuradosNombre_Evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextJuradosNombre_Evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_evento"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20dp"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:textColorHint="#FFF"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutJuradosNumero_Jurados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextJuradosNumero_Jurados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_num_jurados"
                android:drawableLeft="@drawable/ic_people_black_24dp"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="20dp"
                android:textColorHint="#FFF"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:textSize="20dp"
            android:text="@string/text_register" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>


