<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".actividad_principal.Ingresar_Eventos">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_evento"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_event_available_black_24dp"
                android:maxLines="1"
                android:textSize="20dp"
                android:textColorHint="#FFF"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNombre_Evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleDrawable="@drawable/ic_visibility_black"
            app:passwordToggleEnabled="true"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextNombre_Evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:hint="@string/hint_nombre_evento"
                android:inputType="text"
                android:textSize="20dp"
                android:maxLines="1"
                android:textColorHint="#FFF"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_categoria"
                android:drawableLeft="@drawable/ic_wc_black_24dp"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20dp"
                android:textColorHint="#FFF"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ciudad"
                android:drawableLeft="@drawable/ic_business_black_24dp"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20dp"
                android:textColorHint="#FFF"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:textSize="20dp"
            android:text="@string/text_register" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>

